[metadata]
name = tsp_brouter
version = 0.1.2
author = Bryan Keith
author_email = bryandenniskeith@gmail.com
description = A Python CLI script to run travelling salesman problem (tsp) algorithms using brouter routing times.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryandenniskeith/tsp_brouter
project_urls =
    Bug Tracker = https://github.com/bryandenniskeith/tsp_brouter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    urllib3
#    GDAL
#GDAL is required but can't be installed via setuptools
    ortools
#    numpy
scripts = bin/tsp_brouter_cli.py

[options.packages.find]
where = src 
